InternexDev_Sandbox/src/objects/Funding_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Drawal_Fee__c</fullName>
        <formula>MAX( Funding_Requested__c * Drawal_Fee_Percentage__c ,  Minimum_Drawal_fee__c)</formula>
        <label>Applied Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Origination_Fee__c</fullName>
        <formula>MAX( Funding_Limit__c *  Origination_Fee_Percentage__c , Minimum_origination_Fee__c )</formula>
        <label>Applied Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <label>Client Account</label>
        <referenceTo>Client_Account__c</referenceTo>
        <relationshipLabel>Funding Fees</relationshipLabel>
        <relationshipName>Funding_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Drawal_Fee_Percentage__c</fullName>
        <label>Draw Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_Limit__c</fullName>
        <label>Funding Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funding Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Funding Fees</relationshipLabel>
        <relationshipName>Funding_Fees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Requested__c</fullName>
        <label>Funding Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Transaction__c</fullName>
        <label>Funding Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Drawal_fee__c</fullName>
        <label>Minimum Draw fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_origination_Fee__c</fullName>
        <label>Minimum Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Percentage__c</fullName>
        <label>Origination Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Funding Fee</label>
    <nameField>
        <label>Funding Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>